gitops_dryrun_dec11/manifests/platform/argoconfig/argocd-repo-server.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metrics.dynatrace.com/port: '8084'
    metrics.dynatrace.com/scrape: 'true'
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
  name: argocd-repo-server
  namespace: argocd
spec:
  ports:
  - name: server
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: metrics
    port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app.kubernetes.io/name: argocd-repo-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metrics.dynatrace.com/scrape: 'true'
    metrics.dynatrace.com/port: '9001'
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/nae: argocd-redis
    app.kubernetes.io/part-of: argocd
  name: argocd-redis
  namespace: argocd
spec:
  ports:
  - name: tcp-redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
  type: ClusterIP
